# tinyapi

./: .gitignore
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  dependencies.py  main.py  routes.py
backend/app/core/: config.py
backend/app/models/domain/: User.py
backend/app/services/: EntraAuthorization.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  LoginButton.tsx  PresignedUrl.tsx  UserInfo.tsx  main.tsx  msalConfig.ts  useAuth.ts
