[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.20.0",
    "fastapi>=0.115.8",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "python-jose>=3.3.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
